--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
     "express-handlebars": "^8.0.3",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^3.15.3"
   }
 }
