--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,7 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3"
   }
 }
