--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^8.0.3",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.2",
     "flash": "^1.1.0",
     "hbs": "~4.0.4",
